Fixed problem with navbar and Login layout for mobile ready
Navbar was covering other components when the page was reload it was caused for a min-height of 100vh in body

--- a/Client/src/style/reset.css
+++ b/Client/src/style/reset.css
@@ -7,10 +7,6 @@
 *::selection {
   background-color: #8357ff;
 }
-body {
-  min-height: 100vh;
-  background-color: white;
-}
 
 /* // to enable smooth scrolling for the whole page
  html {
